adding location to result page

--- a/search/app/index.html
+++ b/search/app/index.html
@@ -11,6 +11,7 @@
   <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
   <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="bower_components/bootswatch-dist/js/bootstrap.js"></script>
+  <script src="bower_components/leaflet/dist/leaflet.js"></script>
   <script src="bower_components/handlebars/handlebars.js"></script>
   <script src="bower_components/js-md5/js/md5.js"></script>
   <script src="bower_components/bower-bootstrap-slider/js/bootstrap-slider.js"></script>
@@ -36,6 +37,7 @@
   <link href="bower_components/font-awesome/css/font-awesome.css" rel="stylesheet" />
   <link href="bower_components/bower-bootstrap-slider/css/slider.css" rel="stylesheet" />
   <link href="bower_components/animate-css/animate.css" rel="stylesheet" />
+  <link href="bower_components/leaflet/dist/leaflet.css" rel="stylesheet" />
   <link href="css/style.css" rel="stylesheet">
   <!-- endbuild -->
 
@@ -49,16 +51,6 @@
       google.load('visualization', '1', {packages: ['corechart']});
       google.setOnLoadCallback(initchart);
     </script>
-
-  <!--
-  <script type="text/javascript">
-    $(window).ready(function(){
-
-      $("#accordion2").collapse();
-      $("#accordion2").height("auto");
-    });
-  </script>
-  -->
 
 </head>
 <body>
