adding ALL btn for results page filters

--- a/search/app/index.html
+++ b/search/app/index.html
@@ -24,6 +24,7 @@
   <script type="text/javascript" src="js/chart.js"></script>
   <script type="text/javascript" src="js/compare.js"></script>
   <script type="text/javascript" src="js/group.js"></script>
+  <script type="text/javascript" src="js/allFiltersPopup.js"></script>
   <!-- endbuild -->
 
   <script type="text/javascript">
@@ -168,6 +169,21 @@
     <a id="group-next" class="btn btn-primary">Next</a>
 
     <div id="group-loading">Loading...</div>
+  </div>
+</div>
+
+<div class="modal fade" id="all-filters-popup">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <h4 class="modal-title"></h4>
+      </div>
+      <div class="modal-body"></div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
   </div>
 </div>
 
