--- a/search/app/index.html
+++ b/search/app/index.html
@@ -15,6 +15,8 @@
   <script src="bower_components/handlebars/handlebars.js"></script>
   <script src="bower_components/js-md5/js/md5.js"></script>
   <script src="bower_components/bower-bootstrap-slider/js/bootstrap-slider.js"></script>
+  <script src="bower_components/letteringjs/jquery.lettering.js"></script>
+  <script src="bower_components/textillate/jquery.textillate.js"></script>
 
 
   <script type="text/javascript" src="js/app.js"></script>
@@ -59,7 +61,9 @@
 <div id="home" style="display:none; padding:2% 6%">
   <div class="jumbotron" style="text-align:center">
     <h1 style="text-shadow: 2px 2px 0px white"><i class="fa fa-leaf"></i> EcoSIS Spectral Library <span class="sandbox">Sandbox</span></h1>
-    <p>Welcome to the EcoSIS Spectral Library, a useful tool for finding spectral data. <br /><span id="home-total-count"></span></p>
+    <p id="home-text" class="tlt" data-in-effect="fadeIn" data-in-delay="10">Welcome to the EcoSIS Spectral Library, a useful tool for finding spectral data. <br />
+      <p id="home-total-count" class="tlt" data-in-effect="fadeInDown" data-in-shuffle="true"></p>
+    </p>
 
     <p><a href="/#search" class="btn btn-primary btn-lg" role="button"><i class="fa fa-search"></i>  Find Spectra</a></p>
 
