--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ var restUrl = 'http://ecospectra.org?text=&filter='+query+'&start=0&stop=6';</co
 
 <p>The <b>filters</b> parameter lets you filter down the result set to get stats for.  The filters parameter is formatted the same and works the same as the <a href="#find-dataset-filters">Find Dataset Filter Parameter</a>.  Only instead of filtering key/value pairs based on attributes in a dataset, you are filtering on individual spectra metadata.</p>
 
-<h4 id="get-spectra-stats-response">Get Data In Series: Response</h4>
+<h4 id="get-spectra-stats-response">Get Spectra Stats: Response</h4>
 
 <p>The response object for the Get Spectra Stats query is a javascript object.  Each key for the object is a wavelength or datapoint.
   the value is a javascript object, each having the following attributes:</p>
