updating rest link

--- a/search/app/elements/esis-spectra-viewer.html
+++ b/search/app/elements/esis-spectra-viewer.html
@@ -450,7 +450,8 @@
         this.stats.key = filters;
 
         this.$.loadingPanel.style.display = 'inline-block';
-        $.get('/rest/getSpectraStats?package_id='+this.package+filters, function(resp){
+        var url = '/rest/getSpectraStats?package_id='+this.package+filters;
+        $.get(url, function(resp){
           this.stats.value = resp;
 
           var keys = Object.keys(resp);
@@ -462,6 +463,8 @@
           this.createStatsTableArray();
           this.$.loadingPanel.style.display = 'none';
         }.bind(this));
+
+        this.$.restLink.setAttribute('href', window.location.origin+url);
       }
     },
 
