--- a/search/app/elements/esis-spectra-viewer.html
+++ b/search/app/elements/esis-spectra-viewer.html
@@ -159,7 +159,10 @@
           this.$.spectraFilterValueSelector.setAttribute('disabled', 'disabled');
           this.$.spectraFilterValueSelector.innerHTML = '';
           this.activeFilter = null;
-          this.updateDataTable();
+
+          if( this.showingStats) this.updateStats();
+          else this.updateDataTable();
+
           return;
         }
 
