--- a/search/app/elements/esis-spectra-viewer.html
+++ b/search/app/elements/esis-spectra-viewer.html
@@ -38,7 +38,9 @@
       <div style="margin-top: 50px">
         <div class="row">
           <div class="col-sm-6">
-            <a class="btn btn-default" on-click="print"><i class="fa fa-print"></i> Printable Chart</a>
+            <!-- TODO: implement when paper chart supports
+              <a class="btn btn-default" on-click="print"><i class="fa fa-print"></i> Printable Chart</a>
+            -->
           </div>
           <div class="col-sm-6" style="text-align:right">
             <a class="btn btn-link" id="restLink" target="_blank"><i class="fa fa-link"></i> Developer Rest Link</a>
