--- a/search/app/index.html
+++ b/search/app/index.html
@@ -222,10 +222,13 @@
               <div class="help-block">
                 Create custom filter using the following expression.
                 <ul>
-                  <li><b>Equals:</b> <i>Attribute Name</i>=<i>Value</i>.  <br />Ex: Latin Genus=Acer
+                  <li><b>Equals:</b> <i>Attribute Name</i>=<i>Value</i>  <br />Ex: Latin Genus=Acer
                   </li>
-                  <li><b>Has Attribute:</b> ^<i>Attribute Name</i>.  <br />Ex: ^Nitrogen</li>
-                  <li><b>Multiple Expressions:</b> <i>Attribute Name</i>=<i>Value</i>, ^<i>Attribute Name</i>.  <br />Ex: Latin Genus=Acer, ^Nitrogen</li>
+                  <li><b>Has Attribute:</b> ^<i>Attribute Name</i>  <br />Ex: ^Light Source</li>
+                  <li><b>With Regex:</b> <i>Attribute Name</i>=<i>/regular expression/</i>  <br />Ex: Common Name=/.*maple.*/
+                    <br />Do not apply flags (e.g. /.*maple.*/i with 'i' being the case insensitive flag).  'i' is applied by default.
+                  </li>
+                  <li><b>Multiple Expressions:</b> <i>Attribute Name</i>=<i>Value</i>, ^<i>Attribute Name</i>  <br />Ex: Latin Genus=Acer, ^Nitrogen</li>
                 </ul>
               </div>
             </div>
