adding new api call, upgrading polymer

--- a/search/app/elements/esis-spectra-viewer.html
+++ b/search/app/elements/esis-spectra-viewer.html
@@ -26,6 +26,8 @@
           <label><input type="checkbox" on-click="toggleStats" /> Show Stats</label>
         </div>
       </div>
+
+      <!-- TODO: this isn't awesome... popup? popover? -->
       <div class="flex">
         <div class="attributes" id="attributes"></div>
       </div>
