adding get query to docs

--- a/public/apitool/elements/ecosis-api-tool.html
+++ b/public/apitool/elements/ecosis-api-tool.html
@@ -9,6 +9,7 @@
     <div style="padding: 10px">
       <ecosis-package-api panel root-package>
         <ecosis-package-query panel></ecosis-package-query>
+        <ecosis-package-get panel></ecosis-package-get>
       </ecosis-package-api>
 
       <ecosis-spectra-api panel root-spectra>
