--- a/public/apitool/elements.html
+++ b/public/apitool/elements.html
@@ -3,8 +3,10 @@
 <link rel="import" href="../bower_components/paper-tabs/paper-tabs.html" />
 
 <link rel="import" href="elements/ecosis-filter-creator.html" />
+<link rel="import" href="elements/ecosis-query-preview.html" />
 <link rel="import" href="elements/package/ecosis-package-api.html" />
 <link rel="import" href="elements/package/ecosis-package-query.html" />
+<link rel="import" href="elements/package/ecosis-package-get.html" />
 <link rel="import" href="elements/spectra/ecosis-spectra-api.html" />
 <link rel="import" href="elements/spectra/ecosis-spectra-query.html" />
 <link rel="import" href="elements/ecosis-api-tool.html" />
